# FirstGitProject

./: CMakeLists.txt
include/: exercise.h
src/: main.cpp
